# rhai

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  TODO
.ci/: build.sh
.github/workflows/: benchmark.yml  build.yml
benches/: engine.rs  eval_array.rs  eval_expression.rs  eval_map.rs  eval_module.rs  eval_scope.rs  eval_type.rs  iterations.rs  parsing.rs  primes.rs
codegen/: Cargo.toml  README.md
codegen/src/: attrs.rs  function.rs  lib.rs  module.rs  register.rs  rhai_module.rs
codegen/src/test/: function.rs  module.rs
codegen/tests/: test_functions.rs  test_modules.rs  test_nested.rs
codegen/ui_tests/: export_fn_bad_attr.rs  export_fn_bad_attr.stderr  export_fn_bad_value.stderr  export_fn_cfg.stderr  export_fn_extra_value.stderr  export_fn_junk_arg.stderr  export_fn_missing_value.stderr  export_fn_path_attr.stderr  export_fn_raw_noreturn.stderr  export_fn_raw_return.stderr  export_mod_bad_attr.stderr  export_mod_bad_value.stderr  export_mod_cfg.stderr  export_mod_extra_value.stderr  export_mod_junk_arg.stderr  export_mod_missing_value.stderr  export_mod_path_attr.stderr  export_mod_raw_noreturn.stderr  export_mod_raw_return.stderr  first_shared_ref.rs  first_shared_ref.stderr  module_cfg_const.stderr  module_cfg_fn.stderr  non_clonable.rs  non_clonable.stderr  non_clonable_second.rs  non_clonable_second.stderr  return_mut_ref.rs  return_mut_ref.stderr  return_pointer.rs  return_pointer.stderr  return_shared_ref.rs  return_shared_ref.stderr  rhai_fn_bad_attr.stderr  rhai_fn_bad_value.stderr  rhai_fn_duplicate_attr.stderr  rhai_fn_extra_value.stderr  rhai_fn_getter_conflict.stderr  rhai_fn_getter_multiple.stderr  rhai_fn_getter_return.stderr  (+41 more)
diag_test/: Cargo.toml  test_template.rs
doc/: README.md  book.toml
doc/src/: SUMMARY.md  about.md  advanced.md  context.json  engine.md  language.md  links.md  rust.md  safety.md  start.md
doc/src/about/: features.md  index.md  license.md  non-design.md  non_design.md  related.md  targets.md
doc/src/appendix/: keywords.md  literals.md  operators.md
doc/src/engine/: call-fn.md  compile.md  custom-op.md  custom-syntax.md  disable.md  dsl.md  expressions.md  func.md  get_fn_sig.md  hello-world.md  optimize.md  options.md  raw.md  scope.md  var.md
doc/src/language/: arrays.md  assignment-op.md  comments.md  constants.md  convert.md  doc-comments.md  dynamic.md  eval.md  fn-anon.md  fn-capture.md  fn-closure.md  fn-curry.md  fn-namespaces.md  fn-ptr.md  for.md  functions.md  if.md  json.md  keywords.md  logic.md  loop.md  method.md  modules.md  num-fn.md  num-op.md  numbers.md  object-maps-oop.md  object-maps.md  oop.md  other-op.md  overload.md  print-debug.md  return.md  statements.md  string-fn.md  strings-chars.md  switch.md  throw.md  timestamps.md  try-catch.md  (+4 more)
doc/src/patterns/: config.md  control.md  dynamic-const.md  enums.md  events.md  index.md  multi-layer.md  multiple.md  oop.md  parallel.md  singleton.md
doc/src/plugins/: function.md  index.md  module.md
doc/src/rust/: builtin-packages.md  custom.md  disable-custom.md  fallible.md  functions.md  generic.md  getters-setters.md  indexers.md  operators.md  (+9 more)
examples/: README.md  arrays_and_structs.rs  callback.rs  custom_types_and_methods.rs  hello.rs  no_std.rs  repl.rs  reuse_scope.rs  rhai-repl.rs  rhai_runner.rs  serde.rs  simple_fn.rs  strings.rs  threading.rs
examples/definitions/: main.rs
examples/event_handler_js/: main.rs  script.rhai
examples/event_handler_main/: main.rs  script.rhai
examples/event_handler_map/: main.rs  script.rhai
no_std/no_std_repl/: Cargo.toml  README.md
no_std/no_std_repl/src/: main.rs
no_std/no_std_test/: Cargo.toml  README.md
no_std/no_std_test/src/: main.rs
no_std/no_std_win/: Cargo.toml  README.md
no_std/no_std_win/src/: main.rs
scripts/: README.md  array.rhai  comments.rhai  fibonacci.rhai  for1.rhai  function_decl1.rhai  function_decl2.rhai  function_decl3.rhai  if1.rhai  loop.rhai  mat_mul.rhai  op1.rhai  op2.rhai  op3.rhai  primes.rhai  speed_test.rhai  string.rhai  while.rhai
src/: README.md  any.rs  api.rs  ast.rs  builtin.rs  call.rs  custom_syntax.rs  definitions.rs  deprecated.rs  dynamic.rs  engine.rs  engine_api.rs  engine_settings.rs  error.rs  error_parsing.rs  fn_anonymous.rs  fn_args.rs  fn_builtin.rs  fn_call.rs  fn_func.rs  fn_hash.rs  fn_native.rs  fn_ptr.rs  fn_register.rs  immutable_string.rs  lib.rs  module.rs  optimize.rs  optimizer.rs  parse.rs  parse_error.rs  parser.rs  plugin.rs  reify.rs  result.rs  scope.rs  settings.rs  stdlib.rs  syntax.rs  tests.rs  (+4 more)
src/api/: call_fn.rs  compile.rs  custom_syntax.rs  deprecated.rs  eval.rs  events.rs  files.rs  json.rs  limits.rs  mod.rs  optimize.rs  options.rs  public.rs  register.rs  run.rs  settings.rs  type_names.rs
src/ast/: ast.rs  expr.rs  flags.rs  ident.rs  mod.rs  namespace.rs  script_fn.rs  stmt.rs
src/definitions/: mod.rs
src/eval/: cache.rs  chaining.rs  data_check.rs  debugger.rs  eval_context.rs  eval_state.rs  expr.rs  global_state.rs  mod.rs  stmt.rs  target.rs
src/func/: args.rs  builtin.rs  call.rs  callable_function.rs  func.rs  hashing.rs  mod.rs  native.rs  plugin.rs  register.rs  script.rs
src/module/: mod.rs  namespace.rs
src/serde/: de.rs  deserialize.rs  metadata.rs  mod.rs  ser.rs  serialize.rs  str.rs
src/serde_impl/: de.rs  deserialize.rs  metadata.rs  mod.rs  ser.rs  serialize.rs  str.rs
src/types/: custom_types.rs  dynamic.rs  error.rs  fn_ptr.rs  immutable_string.rs  interner.rs  mod.rs  parse_error.rs  scope.rs
tests/: arrays.rs  assignments.rs  binary_ops.rs  bit_fields.rs  bit_shift.rs  blobs.rs  bool_op.rs  call_fn.rs  chars.rs  closures.rs  comments.rs  compound_equality.rs  constants.rs  custom_syntax.rs  data_size.rs  debugging.rs  decrement.rs  engine.rs  eval.rs  expressions.rs  float.rs  fn_ptr.rs  for.rs  functions.rs  get_set.rs  if_block.rs  increment.rs  internal_fn.rs  looping.rs  macro_register.rs  macro_unroll.rs  maps.rs  math.rs  method_call.rs  mismatched_op.rs  modules.rs  native.rs  not.rs  number_literals.rs  operations.rs  (+24 more)
(+57 files in other folders)
