[package]
name = "rhai"
version = "0.15.0"
edition = "2018"
authors = ["Jonathan Turner", "Lukáš Hozda", "Stephen Chung"]
description = "Embedded scripting for Rust"
homepage = "https://github.com/jonathandturner/rhai"
repository = "https://github.com/jonathandturner/rhai"
readme = "README.md"
license = "MIT OR Apache-2.0"
include = [
    "**/*.rs",
    "scripts/*.rhai",
    "Cargo.toml"
]
keywords = [ "scripting" ]
categories = [ "no-std", "embedded", "parser-implementations" ]

[dependencies]
num-traits = { version = "0.2.11", default-features = false }

[features]
#default = ["unchecked", "sync", "no_optimize", "no_float", "only_i32", "no_index", "no_object", "no_function", "no_module"]
default = []
unchecked = []      # unchecked arithmetic
sync = []           # restrict to only types that implement Send + Sync
no_optimize = []    # no script optimizer
no_float = []       # no floating-point
only_i32 = []       # set INT=i32 (useful for 32-bit systems)
only_i64 = []       # set INT=i64 (default) and disable support for all other integer types
no_index = []       # no arrays and indexing
no_object = []      # no custom objects
no_function = []    # no script-defined functions
no_module = []      # no modules

# compiling for no-std
no_std = [ "num-traits/libm", "hashbrown", "core-error", "libm", "ahash" ]

[profile.release]
lto = "fat"
codegen-units = 1
#opt-level = "z"     # optimize for size
#panic = 'abort'     # remove stack backtrace for no-std

[dependencies.libm]
version = "0.2.1"
optional = true

[dependencies.core-error]
version = "0.0.0"
features = ["alloc"]
optional = true

[dependencies.hashbrown]
version = "0.7.1"
default-features = false
features = ["ahash", "nightly", "inline-more"]
optional = true

[dependencies.ahash]
version = "0.3.2"
default-features = false
features = ["compile-time-rng"]
optional = true
