[package]
name = "rhai_codegen"
version = "0.3.2"
edition = "2018"
authors = ["jhwgh1968"]
description = "Procedural macro support package for Rhai, a scripting language for Rust"
homepage = "https://rhai.rs/book/plugins/index.html"
repository = "https://github.com/rhaiscript/rhai"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dev-dependencies]
rhai = { path = ".." }
trybuild = "1"

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full", "parsing", "printing", "proc-macro", "extra-traits"] }
quote = "1"
