[package]
name = "diag_test"
version = "0.1.0"
authors = ["J Henry Waugh <jhwgh1968@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "test_template"
path = "test_template.rs"

[dependencies]
rhai = { version = "*", path = ".." }
